--- a/index.css
+++ b/index.css
@@ -1,1 +1,114 @@
+.profile-image{
+    float:left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo{
+    width: 103px;
+    height: 59px;
+    margin-left: 400px;
+}
+.picture-properties{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-right: 80px;
+    margin-top:50px;
+}
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
 
+.header {
+    margin-left: 400px;
+    margin-right: 400px;
+}
+.user-stats{
+    display: flex;
+    gap: 50px;
+    font-weight: bold;
+}
+
+.about-user{
+    display: flex;
+    flex-direction: column;
+    column-gap: normal;
+    row-gap:0px;
+}
+
+.story-properties {
+    border-radius: 50%;
+    width: 70px;
+    height: 70px
+}
+
+.stories{
+    display: flex;
+    gap: 35px;
+    margin-top: 50px;
+}
+
+.line-one{
+    height: 0.5px;
+    background: lightgray;
+}
+
+.user-info{
+    display: flex;
+    align-items: center;
+}
+
+.user-name{
+    margin-right: 5px;
+    font-size: 25px;
+}
+
+.buttons{
+    border-radius: 8px;
+    font-weight: bold;
+    border: none;
+    height: 32px;
+    width: 84px;
+}
+
+.story-captions{
+    display: flex;
+    flex-direction: row;
+    gap: 65px;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.badge{
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+}
+
+.user-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 80px;
+}
+
+.line-two{
+    height: 0.5px;
+    background: lightgray;
+    width: 925px;
+    margin-left: 380px;
+}
+
+.images{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3px;
+}
+
+.image-properties{
+    width: 309px;
+    height: 309px;
+}
